Edited wiki page Changelog through web user interface.

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,25 @@
 #labels Featured,Phase-Requirements
 =kh_mod 0.4.1, 12.12.2012=
 
+  *  修复: 一些关于sql(MySQL) "传统" 模式的问题
+  *  MySQL接口MySQLi支持PHP 5.4及以上。如果在用一个低版本的PHP，新版本的接口一样可以使用
+  *  增加"每日统计" (选项|统计|点击统计)管理
+  *  控制面板增加“最新导入项目”系统目录，该目录包含所有最近上传和最近导入的文件
+  *  增加了"强制缩略图至设定值"选项, 如果输入同样的高度和宽度（选项|设置），现在将会生成方形缩略图
+  *  Flowplayer的版本升级至3.2.16
+  *  JSColor的版本升级至1.4.1
+  *  Colorbox的版本升级至1.4.7 (最新版本支持IE6)
+  *  旋转图片的内存占用减少到30%
+  *  "mg2admin_convert.php"更名为"mg2admin_converter.php"，同时也对代码进行了重写
+  *  如果数据库从平面文件切换到MySQL或者切换回去，现在会显示MySQL的计数器和关键词的记录数值。在早期的版本，所有文件（图片、视频或者音频）的数据仅作为一个数据记录。
+由于这个原因，现在记录的数值要比过去的版本高。
+  *  在管理员邮箱中关于最新评论的通知中将会增加站点页面编码，尽可能避免邮件中的文本显示错误, 除此之外, 移除任何主题栏的标签
+  *  基于WebKit核心浏览器(Google Chrome, Safari等)，修复控制面板界面的一些显示问题
+  *  一些小修复
+  *  更新语言包
+
+=kh_mod 0.4.1, 12.12.2012=
+
   *  修复: 一些与"windows-1253" (Greek)字符集相关的问题
   *  Flowplayer升级到3.2.15
   *  JSColor升级到1.4.0
